# physax

./: .gitignore  CLAUDE.md  README.md  __main__.py  ancestor_full_division_illustration.py  debug_repro.py  decode_genome_illustration.py  make_gif.py  make_physis_gif.py  physax.py  physis_jax.py  pyproject.toml  requirements.txt  run_experiment.py  verify_sim.py
physax/: __main__.py  agent.py  analysis.py  config.py  constants.py  genome_analysis.py  model.py  mutations.py  parser.py  population.py  simulation.py  state.py  virtual_machine.py  visualization.py  viz.py  vm.py
